--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,10 @@ run
 /gradlew.bat
 /gradle.properties
 /pemc.iml
+/CREDITS-fml.txt
+/forge-1.12.2-14.23.3.2655-changelog.txt
+/LICENSE-new.txt
+/MinecraftForge-Credits.txt
+/Paulscode IBXM Library License.txt
+/Paulscode SoundSystem CodecIBXM License.txt
+/README.txt
